--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
