--- a/package.json
+++ b/package.json
@@ -6,21 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "npm remove @prisma-client && prisma generate",
+    "push-db": "dotenv -e ./env/development.env -- prisma db push"
   },
   "dependencies": {
+    "@fluentui/react-components": "^9.7.2",
+    "@fluentui/react-icons": "^2.0.190",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.7.1",
+    "crypto-js": "^4.1.1",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
-    "next": "13.0.5",
+    "next": "13.0.7",
+    "next-auth": "^4.18.6",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/crypto-js": "^4.1.1",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "18.11.16",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "typescript": "4.9.3"
+    "@types/react-icons": "^3.0.0",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7",
+    "prisma": "^4.7.1",
+    "typescript": "4.9.4"
   }
 }
