--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "gen": "npm remove @prisma-client && prisma generate",
-    "push-db": "dotenv -e ./env/development.env -- prisma db push"
+    "push-db": "prisma db push"
   },
   "dependencies": {
     "@fluentui/react-components": "^9.7.2",
     "@fluentui/react-icons": "^2.0.190",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.7.1",
+    "@prisma/client": "^4.8.0",
     "crypto-js": "^4.1.1",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
@@ -34,7 +34,7 @@
     "@types/react-icons": "^3.0.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "prisma": "^4.7.1",
+    "prisma": "^4.8.0",
     "typescript": "4.9.4"
   }
 }
