moved logout to dropdown

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ EMAIL_SERVER_PASSWORD=SG.Ykgkd7UeTm-PTfYE3rQ6gg.2YvPOx8pmGsFXHyujl2iCSnyrndAS1uN
 EMAIL_SERVER_HOST=smtp.sendgrid.net
 EMAIL_SERVER_PORT=587
 EMAIL_FROM=omairdal@gmail.com
+NEXTAUTH_SECRET=alksdjfLKSDJFQWEIOUR123LSKDJF
