--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
     "push-db": "prisma db push"
   },
   "dependencies": {
-    "@fluentui/react-components": "^9.7.2",
-    "@fluentui/react-icons": "^2.0.190",
+    "@emotion/cache": "^11.10.7",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.7.1",
+    "@prisma/client": "^4.8.0",
     "crypto-js": "^4.1.1",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
-    "next": "13.0.7",
+    "next": "^13.3.1",
     "next-auth": "^4.18.6",
     "nodemailer": "^6.8.0",
-    "prisma": "^4.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
@@ -33,7 +36,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "prisma": "^4.7.1",
+    "prisma": "^4.8.0",
     "typescript": "4.9.4"
   }
 }
