--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
+    "@vercel/analytics": "^1.0.1",
     "crypto-js": "^4.1.1",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
