--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
     "@vercel/analytics": "^1.0.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
@@ -39,6 +40,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "prisma": "^4.8.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@types/cors": "^2.8.13"
   }
 }
