--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.13.0",
     "@vercel/analytics": "^1.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -33,14 +33,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "prisma": "^4.8.0",
-    "typescript": "4.9.4",
-    "@types/cors": "^2.8.13"
+    "prisma": "^4.13.0",
+    "typescript": "4.9.4"
   }
 }
