--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ EMAIL_SERVER_HOST=smtp.sendgrid.net
 EMAIL_SERVER_PORT=587
 EMAIL_FROM=omairdal@gmail.com
 NEXTAUTH_SECRET=alksdjfLKSDJFQWEIOUR123LSKDJF
+NEXTAUTH_URL=http://localhost:3000
