--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.13.0",
+    "@types/nprogress": "^0.2.0",
     "@vercel/analytics": "^1.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -29,6 +30,7 @@
     "next": "^13.3.1",
     "next-auth": "^4.18.6",
     "nodemailer": "^6.8.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
