added logger, can leave house, better invitation

--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ EMAIL_SERVER_HOST=smtp.sendgrid.net
 EMAIL_SERVER_PORT=587
 EMAIL_FROM=omairdal@gmail.com
 NEXTAUTH_SECRET=alksdjfLKSDJFQWEIOUR123LSKDJF
-NEXTAUTH_URL=http://192.168.8.100:3000
+NEXTAUTH_URL=http://localhost:3000
