--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
+    "@types/gyronorm": "^2.0.1",
     "@types/nprogress": "^0.2.0",
+    "@types/three": "^0.152.0",
     "@vercel/analytics": "^1.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "gyronorm": "^2.0.6",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "next": "^13.3.1",
@@ -32,7 +35,8 @@
     "nodemailer": "^6.8.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.152.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
