--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
-    "@types/gyronorm": "^2.0.1",
-    "@types/nprogress": "^0.2.0",
-    "@types/three": "^0.152.0",
     "@vercel/analytics": "^1.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -35,8 +32,7 @@
     "nodemailer": "^6.8.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "^0.152.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -44,6 +40,8 @@
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/gyronorm": "^2.0.1",
+    "@types/nprogress": "^0.2.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "prisma": "^4.14.0",
