--- a/package.json
+++ b/package.json
@@ -11,40 +11,41 @@
     "push-db": "prisma db push"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.7",
-    "@emotion/react": "^11.10.6",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.6",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.127",
-    "@mui/material": "^5.12.1",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.14.0",
-    "@vercel/analytics": "^1.0.1",
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.21.1",
+    "@vercel/analytics": "^1.3.2",
     "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^2.29.3",
     "gyronorm": "^2.0.6",
-    "mobx": "^6.7.0",
-    "mobx-react-lite": "^3.4.0",
-    "next": "^13.3.1",
-    "next-auth": "^4.18.6",
-    "nodemailer": "^6.8.0",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
+    "next": "^15.0.2",
+    "next-auth": "^4.24.10",
+    "nodemailer": "^6.9.16",
     "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/crypto-js": "^4.1.1",
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
+    "@types/gyronorm": "^2.0.4",
     "@types/node": "18.11.16",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@types/gyronorm": "^2.0.1",
-    "@types/nprogress": "^0.2.0",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.0.7",
-    "prisma": "^4.14.0",
-    "typescript": "4.9.4"
+    "@types/nprogress": "^0.2.3",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "eslint": "9.13.0",
+    "eslint-config-next": "15.0.2",
+    "prisma": "^5.21.1",
+    "typescript": "5.6.3"
   }
 }
