--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": [ "dom", "dom.iterable", "esnext" ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,35 +16,16 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "*"
-      ],
-      "@components/*": [
-        "components/*"
-      ],
-      "@pages/*": [
-        "pages/*"
-      ],
-      "@styles/*": [
-        "styles/*"
-      ],
-      "@utils/*": [
-        "utils/*"
-      ],
-      "@context/*": [
-        "context/*"
-      ],
-      "@types/*": [
-        "types/*"
-      ]
+      "@*": [ "*" ],
+      "@components/*": [ "components/*" ],
+      "@pages/*": [ "pages/*" ],
+      "@styles/*": [ "styles/*" ],
+      "@utils/*": [ "utils/*" ],
+      "@hooks/*": [ "hooks/*" ],
+      "@context/*": [ "context/*" ],
+      "@types/*": [ "types/*" ]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": [ "next-env.d.ts", "**/*.ts", "**/*.tsx" ],
+  "exclude": [ "node_modules" ]
 }
