--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^7.22.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.1",
+    "@types/nodemailer": "^6.4.16",
     "@vercel/analytics": "^1.3.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
